--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>WhatScheduler</title>
+  <title>WhatScheduler v0.0.1-beta</title>
 
   <base href="/" />
 
